--- a/.github/workflows/fix-line-endings.yml
+++ b/.github/workflows/fix-line-endings.yml
@@ -1,15 +1,15 @@
 name: Fix Line Endings
 
 on:
-  workflow_dispatch: # Allows manual triggering from the Actions tab
+  workflow_dispatch: # Allows you to manually trigger the workflow
 
 jobs:
-  fix_line_endings:
+  convert_line_endings:
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
         
       - name: Convert line endings to Unix
         run: |
